--- a/contact.html
+++ b/contact.html
@@ -43,117 +43,9 @@
     </nav>
     <!-- \ navbar -->
 
-    <!-- <div class="container">
-        <div class="text-center mt-5">
-            <h1>Contact</h1>
-        </div>
-        <div>
-            <form id="contact-form">
-                <div class="form-group">
-                    <label for="owner-name">Owner Name <span class="form-required">*</span></label>
-                    <input type="text" placeholder="Enter owner's name" required>
-                </div>
-                <div class="form-group">
-                    <label for="property-title">Property Title <span class="form-required">*</span></label>
-                    <input type="text" placeholder="Enter property title" required>
-                </div>
-                <div class="form-group">
-                    <label for="property-address">Property Address <span class="form-required">*</span></label>
-                    <input type="text" placeholder="Enter property address" required>
-                </div>
-                <div class="form-group">
-                    <label for="website-url">Website URL (if available)</label>
-                    <input type="text" placeholder="Enter website URL">
-                </div>
-                <div class="form-group">
-                    <label>Ownership Type <span class="form-required">*</span></label>
-                    <div class="form-radio-group">
-                        <label><input type="radio" name="ownership-type" value="Personal" required> Personal</label>
-                        <label><input type="radio" name="ownership-type" value="Shared" required> Shared</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>Property options (select both if related)</label>
-                    <div class="form-checkbox-group">
-                        <label><input type="checkbox" value="Only Land"> Only Land</label>
-                        <label><input type="checkbox" value="Only Buildings"> Only Buildings</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone <span class="form-required">*</span></label>
-                    <input type="tel" placeholder="Enter phone number" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email <span class="form-required">*</span></label>
-                    <input type="email" placeholder="Enter email address" required>
-                </div>
-                <button type="submit">Submit Now</button>
-            </form>
-        </div>
-    </div> -->
 
-    <!-- Final contact form -->
-    <!-- <div class="container">
-        <div class="text-center mt-5">
-            <h1>Contact</h1>
-        </div>
-        <div>
-            <form id="contact-form">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="owner-name">Owner Name <span class="form-required">*</span></label>
-                            <input type="text" class="form-control" id="owner-name" placeholder="Enter owner's name"
-                                required>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="property-title">Property Title <span class="form-required">*</span></label>
-                            <input type="text" class="form-control" id="property-title"
-                                placeholder="Enter property title" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="property-address">Property Address <span class="form-required">*</span></label>
-                    <input type="text" class="form-control" id="property-address" placeholder="Enter property address"
-                        required>
-                </div>
-                <div class="form-group">
-                    <label for="website-url">Website URL (if available)</label>
-                    <input type="text" class="form-control" id="website-url" placeholder="Enter website URL">
-                </div>
-                <div class="form-group">
-                    <label>Ownership Type <span class="form-required">*</span></label>
-                    <div class="form-radio-group">
-                        <label><input type="radio" name="ownership-type" value="Personal" required> Personal</label>
-                        <label><input type="radio" name="ownership-type" value="Shared" required> Shared</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>Property options (select both if related)</label>
-                    <div class="form-checkbox-group">
-                        <label><input type="checkbox" value="Only Land"> Only Land</label>
-                        <label><input type="checkbox" value="Only Buildings"> Only Buildings</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone <span class="form-required">*</span></label>
-                    <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email <span class="form-required">*</span></label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter email address" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit Now</button>
-            </form>
-        </div>
-    </div> -->
-
-
-    <!-- 3rd form -->
-    <div class="container contact-section">
+    <!-- Contact Form Section -->
+    <section class="container contact-section">
         <div class="text-center mt-2">
             <h1>Contact Us</h1>
         </div>
@@ -221,10 +113,11 @@
                 </form>
             </div>
         </div>
-    </div>
+    </section>
+    <!-- \ Contact Form Section -->
 
 
-    <!-- footer -->
+    <!-- Footer Section -->
     <footer class="container-fluid footer-section">
         <h1>XYZ Property</h1>
         <div class="social-icons">
@@ -234,7 +127,7 @@
         </div>
         <p>&copy; 2024 XYZ Property. All rights reserved.</p>
     </footer>
-
+    <!-- \ Footer Section -->
 
 
     <!-- bootstrap js links -->
