--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </nav>
     <!-- \ navbar -->
 
+
     <!-- Hero Banner -->
     <section class="container-fluid background">
         <div class="content">
@@ -57,8 +58,8 @@
     <!--\ Hero Banner -->
 
 
-    <!-- Feature section -->
-    <div class="container feature">
+    <!-- Feature Section -->
+    <section class="container feature">
         <div class="text-center mt-5 feature-section">
             <h1>Features</h1>
             <p>Unlock the potential of our land with these features</p>
@@ -98,11 +99,11 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!-- \ Features -->
+    </section>
+    <!-- \ Features Section -->
+
 
     <!-- Location Section -->
-
     <section class="location-section">
         <div class="container location-info">
             <div class="row">
@@ -136,7 +137,7 @@
             </div>
         </div>
     </section>
-    <!-- \ Location section-->
+    <!-- \ Location Section -->
 
 
     <!-- Testimonals -->
@@ -244,7 +245,6 @@
             </div>
         </div>
     </section>
-
     <!-- \ Testimonials Section -->
 
 
@@ -265,7 +265,7 @@
     <!-- \ Get In Touch Ends -->
 
 
-    <!-- footer -->
+    <!-- Footer Section -->
     <footer class="container-fluid footer-section">
         <h1>XYZ Property</h1>
         <div class="social-icons">
@@ -275,7 +275,7 @@
         </div>
         <p>&copy; 2024 XYZ Property. All rights reserved.</p>
     </footer>
-
+    <!-- \ Footer Section -->
 
 
     <!-- bootstrap js links -->
