--- a/property.html
+++ b/property.html
@@ -43,58 +43,8 @@
     </nav>
     <!-- \ navbar -->
 
-    <!-- 
-    <section class="container property-section">
-        <div class="text-center">
-            <h2>New Properties</h2>
-            <a href="#" class="text-secondary">See All</a>
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-4">
-                <div class="card property-card">
-                    <img src="images/image1.jpg" class="card-img-top" alt="Property Image">
-                    <div class="card-body property-details">
-                        <h5 class="property-title">Galaxy Apartment</h5>
-                        <div class="property-info"><i class="far fa-calendar-alt"></i> July 15, 2022</div>
-                        <div class="property-info"><i class="fas fa-map-marker-alt"></i> 1803 Walt Nuzum Farm Road</div>
-                        <div class="property-info"><i class="fas fa-ruler-combined"></i> 2000 Sq.ft - 3 Bed - 2 Bath - 1
-                            Garage</div>
-                        <div class="property-price">₹22L</div>
-                        <a href="#" class="btn btn-sm see-details-btn mt-3">Enquiry Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card property-card">
-                    <img src="images/image2.jpg" class="card-img-top" alt="Property Image">
-                    <div class="card-body property-details">
-                        <h5 class="property-title">Galaxy Apartment</h5>
-                        <div class="property-info"><i class="far fa-calendar-alt"></i> July 15, 2022</div>
-                        <div class="property-info"><i class="fas fa-map-marker-alt"></i> 1803 Walt Nuzum Farm Road</div>
-                        <div class="property-info"><i class="fas fa-ruler-combined"></i> 2000 Sq.ft - 3 Bed - 2 Bath - 1
-                            Garage</div>
-                        <div class="property-price">₹22L</div>
-                        <a href="#" class="btn btn-sm see-details-btn mt-3">Enquiry Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card property-card">
-                    <img src="images/image1.jpg" class="card-img-top" alt="Property Image">
-                    <div class="card-body property-details">
-                        <h5 class="property-title">Galaxy Apartment</h5>
-                        <div class="property-info"><i class="far fa-calendar-alt"></i> July 15, 2022</div>
-                        <div class="property-info"><i class="fas fa-map-marker-alt"></i> 1803 Walt Nuzum Farm Road</div>
-                        <div class="property-info"><i class="fas fa-ruler-combined"></i> 2000 Sq.ft - 3 Bed - 2 Bath - 1
-                            Garage</div>
-                        <div class="property-price">₹22L</div>
-                        <a href="#" class="btn btn-sm see-details-btn mt-3">Enquiry Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
+    <!-- Properties Section -->
     <section class="container property-section">
         <div class="text-center">
             <h2>New Properties</h2>
@@ -190,9 +140,10 @@
             </div>
         </div>
     </section>
+    <!-- \ Properties Section -->
 
 
-    <!-- footer -->
+    <!-- Footer Section -->
     <footer class="container-fluid footer-section">
         <h1>XYZ Property</h1>
         <div class="social-icons">
@@ -202,7 +153,7 @@
         </div>
         <p>&copy; 2024 XYZ Property. All rights reserved.</p>
     </footer>
-
+    <!-- \ Footer Section -->
 
 
     <!-- bootstrap js links -->
